--- a/Modern/main.tex
+++ b/Modern/main.tex
@@ -30,7 +30,7 @@
 \vspace{1mm} \summary{DevOps Engineer with almost 4 years of working experience who loves to solve engineering problems. Well-versed in writing code to architecting solutions \& strategies. Always prefer following DevOps pratices using open-source softwares with a passion to contribute back to community.}
 \end{adjustwidth}
 
-\vspace{12pt}
+\vspace{10pt}
 \section{Work Experience}{briefcase}
 \vspace{1pt}
 
@@ -38,11 +38,11 @@
 %background rectangle/.style={fill=red!40},show background rectangle,
 inner sep=0pt,outer sep=0pt]
 
-\draw[content, thick] (0,23) -- (0,0);
-\filldraw[content][-{Triangle[length=1.2mm, width=1.6mm]}] (0,22) -- (0,23.1);
+\draw[content, thick] (0,23.3) -- (0,0);
+\filldraw[content][-{Triangle[length=1.2mm, width=1.6mm]}] (0,22) -- (0,23.4);
 \filldraw[content](0,0)circle(2pt);
 
-\workitem{0}{22.6}{2020}{
+\workitem{0}{22.9}{2020}{
 \begin{minipage}{0.88\linewidth}
 \raggedright
 \contributionheading{SAP Labs, Bangalore, India}\\
@@ -53,25 +53,29 @@ inner sep=0pt,outer sep=0pt]
         \justifying \noindent
 Currently working in SAP Cloud Platform project
 \begin{myBullets}
-\item Developing \& Maintaining Monitoring stack of SAP Cloud Platform on IaC
-\item Reduced landscape update time by 85\% via automation using Jenkins
-\item Reduced outage downtime by 75\% via pipeline introduction in Concourse for basic tasks
-\item Automated testing of Riemann using Github Action, resulting in more confident PRs
-\item Created \& Maintained BOSH releases for Telegraf, Grafana, InfluxDB \& Riemann
-\item Increased productivity by 50\% by automating BOSH release creation via containerization
-\item Troubleshooted issues within SAP Cloud Platform environments in case of outages
-\item Provisioned Load Balancer via IaC on various Hyperscalers using Terraform
-\item Brought in MultiAZ support for the Monitoring stack, thus increasing Availability
-\item Saved team efforts by implementing Automatic credentials rotation of monitoring stack via scripting within IaC
+\item Developing \& Maintaining Monitoring stack of SAP Cloud Platform on various Public Clouds
+\item Collaborated with multiple teams on same Infra as Code repository
+%\item Brought in Multi-AZ support for the Monitoring stack, thus increasing Availability in distributed system
+\item Achieved High-Availability in distributed system by implementing Multi-AZ
+\item Introduced RCA in concourse pipeline which lead to 75\% reduction in downtime compared to year before
+\item Handled, troubleshooted \& resolved issues during outages
+\item Saved team efforts by automating credentials rotation of monitoring stack via shell scripting within IaC
+\item Automated testing of Metrics processor using Github Actions, resulting in more confident PRs
+%\item Automated landscape update process via scripting which is 85\% faster and error free
+\item Solved an operation problem by automating landscape update process via shell scripting which made it 85\% faster and error free
+\item Boosted productivity upto 50\% by automating BOSH release creation and containerizing the process
+\item Provisioned Load Balancer on various Hyperscalers via Terraform within IaC
+\end{myBullets}
+Monitoring Stack: Telegraf, Riemann, InfluxDB, Grafana
+\begin{myBullets}
 \item Derived optimum configuration to run Fluent at scale by doing performance test of Fluent in EFK stack
 \item Did Performance test of Cortex. Identified bottlenecks in Ingester \& Store Gateway
 \end{myBullets}
-Technologies used are K6, Docker, Prometheus, Grafana, K8s
+Tooling: K6, Docker, Prometheus, Grafana, Kubernetes, Jaeger
 \end{minipage}
 }
 
-
-\workitem{0}{12.45}{2018}{
+\workitem{0}{12.8}{2018}{
 %% content of work item
 \begin{minipage}{0.88\linewidth}
 \raggedright
@@ -84,25 +88,26 @@ Technologies used are K6, Docker, Prometheus, Grafana, K8s
 DevOps Engineer in a product based on Microservice architecture
 \begin{myBullets}
 \item Architected the product to be cloud-native and collaborated with team to ensure that DevOps practices are being followed
-\item Developed resilient pipeline on Jenkins which integrated well with multiple branches
+\item Developed resilient \& reliable pipeline on Jenkins \& Github Actions which integrated well with multiple branches
+\item Pipeline also consisted the stages for security \& compliance check
 \item Set up full production environment for applications to run on Cloud Foundry
 \end{myBullets}
 Software Engineer in Observability team
 \begin{myBullets}
-\item Integrated Jaeger into Observability Stack of SAP Cloud Platform via own project
-\item Worked with stakeholders to integrate Jaeger into their solutions for tracing
-\item Architected the Deployment strategy for Jaeger as a Service
+\item Architected the Deployment strategy for Jaeger as a Service in an orchestrated environment
+\item Integrated Jaeger into Observability Stack of SAP Cloud Platform via personal project
+\item Collaborated with Internal teams to integrate Jaeger into their solution
 \end{myBullets}
 Full Stack Developer in cloud based product
 \begin{myBullets}
-\item Used NodeJS and UI5 during development
-\item Created Backend APIs in NodeJS for various features in a product which is used to visualize the customer's on-prem landscape
+\item Created Backend APIs in NodeJS for various features in a product which helped customers to visualize on-prem landscape
 \item Did UX enhancements on frontend using SAP UI5 library
 \end{myBullets}
 System Administrator in a project dedicated to migration
 \begin{myBullets}
 \item Tasked to migrate SAP Netweaver On-Premise systems to GCP
-\item Migrated 25+ Systems. Target of 1000 systems in that year was achieved
+\item Migrated 25+ Systems. Team achieved target of 1000 systems by year end
+\item Automated installation of Netweaver system via Perl script
 \end{myBullets}
 Tooling: rsync, CloudEndure, Perl, Bash
 \end{minipage}
@@ -122,7 +127,7 @@ Tooling: rsync, CloudEndure, Perl, Bash
 Software Developer for IoT based applications and products
 \begin{myBullets}
 \item Developed E2E products for customer solving some of their daily problems e.g. Capture Vehicle Number in parking lot, Automatic Door Lock System, Dash Cam streaming video to Cloud.
-\item Technologies used were Docker, MQTT, SpringBoot, Android, Image Recognition, Java \& Python
+\item Technologies: Docker, MQTT, SpringBoot, Android, Image Recognition, Java \& Python
 \end{myBullets}
 \end{minipage}
 }
@@ -159,7 +164,7 @@ Software Developer for IoT based applications and products
 
 \end{tabular}
 
-\vspace{10pt}
+\vspace{8pt}
 \section{Achievements \& Certifications}{award}
 \vspace{5pt}
 
@@ -168,7 +173,7 @@ Software Developer for IoT based applications and products
 
 \filldraw[content][-{Triangle[length=1.2mm, width=1.6mm]}] (2,2.1) -- (2,2.6);
 
-\achievementitem{2}{2.1}{Certified Kubernetes Administrator}{(July 2020 - July 2024)}{2020}
+\achievementitem{2}{2.1}{Certified Kubernetes Administrator}{(July 2021 - July 2024)}{2020}
 \achievementitem{2}{1.3}{Secured 2nd position in Inter College Quiz Competition}{(Feb 2017)}{2017}
 \achievementitem{2}{0.5}{Awarded 50\% Scholarship in all Semesters}{}{2015};
 \filldraw[content](2,0)circle(2pt);
@@ -209,7 +214,7 @@ Software Developer for IoT based applications and products
 \draw[content, thick] (2,2.1) -- (2,0.2);
 %\filldraw[content][-{Triangle[length=1mm, width=2mm]}] (2,2.0) -- (2,2.2);
 \filldraw[content][-{Triangle[length=1.2mm, width=1.6mm]}] (2,0.2) -- (2,2.2);
-\educationitem{2}{1.7}{M.Tech in Software Engineering (CGPA 8.4)}{BITS Pilani}{(Aug 2018 - July 2022)}{2018}
+\educationitem{2}{1.7}{M.Tech in Software Engineering (CGPA 8.53)}{BITS Pilani}{(Aug 2018 - July 2022)}{2018}
 \educationitem{2}{.7}{Bachelor in Computer Applications (CGPA 7.52)}{Amity University}{(July 2015 - June 2018)}{2015}
 
 \filldraw[content](2,0.2)circle(2pt);
@@ -251,13 +256,16 @@ Software Developer for IoT based applications and products
 \hspace{7mm}
 \begin{minipage}{.85\linewidth}
 \vspace{3mm}
+\begin{multicols}{2}
 \timelineyear{} % important
 \begin{myBullets}[itemsep=3.5pt]
-    \item \timelineyear{Games}
-    \item \timelineyear{Fitness}
-    \item \timelineyear{Music}
-    \item \timelineyear{Netflix}
+    \item \timelineyear{Playing Games}
+    \item \timelineyear{Irregular GYM}
+    \item \timelineyear{Listening to Music}
+    \item \timelineyear{Streaming Netflix}
+    \item \timelineyear{Coded this file in Latex}
 \end{myBullets}
+\end{multicols}
 \end{minipage}
 
 \end{minipage}
