--- a/Modern/main.tex
+++ b/Modern/main.tex
@@ -10,6 +10,7 @@
 \usepackage{ragged2e}
 \usetikzlibrary{backgrounds}
 \usepackage{fontawesome5}
+\usepackage[none]{hyphenat}%%%%
 \usetikzlibrary{arrows.meta}
 %\setlength{\columnsep}{0.5cm}
 %\def\columnseprulecolor{\color{blue}}
@@ -38,74 +39,107 @@
 %background rectangle/.style={fill=red!40},show background rectangle,
 inner sep=0pt,outer sep=0pt]
 
-\draw[content, thick] (0,23.3) -- (0,0);
-\filldraw[content][-{Triangle[length=1.2mm, width=1.6mm]}] (0,22) -- (0,23.4);
+\draw[content, thick] (0,22.8) -- (0,0);
+\filldraw[content][-{Triangle[length=1.2mm, width=1.6mm]}] (0,21.5) -- (0,22.9);
 \filldraw[content](0,0)circle(2pt);
 
-\workitem{0}{22.9}{2020}{
+\workitem{0}{22.4}{2018}{
 \begin{minipage}{0.88\linewidth}
 \raggedright
 \contributionheading{SAP Labs, Bangalore, India}\\
         \achievement{Site Reliability Engineer}
-        \color{main-theme}(July 2020 - Present)\\
+        \color{main-theme}(May 2020 - Present)\\
         \timelineyear{}
         \fontsize{7pt}{11pt}
         \justifying \noindent
-Currently working in SAP Cloud Platform project
+SAP Cloud Platform is a region specific PaaS solution. It's maintained by multiple teams in a single Infrastructure as code repository
 \begin{myBullets}
-\item Developing \& Maintaining Monitoring stack of SAP Cloud Platform on various Public Clouds
-\item Collaborated with multiple teams on same Infra as Code repository
-%\item Brought in Multi-AZ support for the Monitoring stack, thus increasing Availability in distributed system
-\item Achieved High-Availability in distributed system by implementing Multi-AZ
-\item Introduced RCA in concourse pipeline which lead to 75\% reduction in downtime compared to year before
-\item Handled, troubleshooted \& resolved issues during outages
-\item Saved team efforts by automating credentials rotation of monitoring stack via shell scripting within IaC
-\item Automated testing of Metrics processor using Github Actions, resulting in more confident PRs
-%\item Automated landscape update process via scripting which is 85\% faster and error free
+\item Resolved production issues e.g. Memory Leak, Slow DB writes, etc
+\item Automated rotation of AWS IAM user key after 90 days via Terraform \& CD
+\item Achieved High availability by rearchitecting stack for multi-zone deployment with Load Balancer provisioned via Terraform
+\item Reduced downtime by 75\% by introducing automated RCA scripts in CI/CD pipeline which can be triggered during outages
+%\item Responsible for troubleshooting \& resolving issues during outages
 \item Solved an operation problem by automating landscape update process via shell scripting which made it 85\% faster and error free
-\item Boosted productivity upto 50\% by automating BOSH release creation and containerizing the process
-\item Provisioned Load Balancer on various Hyperscalers via Terraform within IaC
+\item Implemented Mutual TLS to authenticate incoming metrics with auto creation \& rotation of certificates via CI/CD pipeline
+\item Automated compile \& release creation of repos by small Docker project
+\item Utilized CD pipeline to automatically rotate DB and Grafana credentials
 \end{myBullets}
-Monitoring Stack: Telegraf, Riemann, InfluxDB, Grafana
+Leveraged Knowledge in Git, Grafana, InfluxDB, Riemann, Telegraf, Bash
+
+\vspace{1.5ex}
+\raggedright
+\achievement{Performance Engineer}
+\color{main-theme}(Mar 2020 - Present)\\
+\timelineyear{}
+\justifying \noindent
+Optimizing and Benchmarking various solution hosted on Kubernetes
 \begin{myBullets}
-\item Derived optimum configuration to run Fluent at scale by doing performance test of Fluent in EFK stack
-\item Did Performance test of Cortex. Identified bottlenecks in Ingester \& Store Gateway
+\item Derived optimum configuration of Fluent in EFK stack
+\item Optimized Cortex performance (Distributed database for Prometheus)
 \end{myBullets}
 Tooling: K6, Docker, Prometheus, Grafana, Kubernetes, Jaeger
-\end{minipage}
-}
+%\end{minipage}
+%}
 
-\workitem{0}{12.8}{2018}{
-%% content of work item
-\begin{minipage}{0.88\linewidth}
+%\workitem{0}{12.8}{2018}{
+%\begin{minipage}{0.88\linewidth}
+%\raggedright
+%\contributionheading{SAP Labs, Bangalore, India}\\
+%        \achievement{Scholar}
+%        \color{main-theme}(Aug 2018 - June 2020)\\
+%        \timelineyear{}
+%        \fontsize{7pt}{11pt}
+%\justifying 
+
+
+\vspace{1.8ex}
 \raggedright
-\contributionheading{SAP Labs, Bangalore, India}\\
-        \achievement{Scholar}
-        \color{main-theme}(Aug 2018 - June 2020)\\
-        \timelineyear{}
-        \fontsize{7pt}{11pt}
+\achievement{Software Engineer}
+\color{main-theme}(Dec 2019 - Feb 2020)\\
+\timelineyear{}
 \justifying \noindent
-DevOps Engineer in a product based on Microservice architecture
-\begin{myBullets}
-\item Architected the product to be cloud-native and collaborated with team to ensure that DevOps practices are being followed
-\item Developed resilient \& reliable pipeline on Jenkins \& Github Actions which integrated well with multiple branches
-\item Pipeline also consisted the stages for security \& compliance check
-\item Set up full production environment for applications to run on Cloud Foundry
-\end{myBullets}
-Software Engineer in Observability team
+Short lived team meant for evaluating Jaeger for Tracing support
 \begin{myBullets}
 \item Architected the Deployment strategy for Jaeger as a Service in an orchestrated environment
 \item Integrated Jaeger into Observability Stack of SAP Cloud Platform via personal project
-\item Collaborated with Internal teams to integrate Jaeger into their solution
+%\item Collaborated with Internal teams to integrate Jaeger into their solution
 \end{myBullets}
-Full Stack Developer in cloud based product
+Tooling: Cassandra, Jaeger, Helm, Kubernetes, Golang
+
+
+\vspace{1.8ex}
+\raggedright
+\achievement{DevOps Engineer}
+\color{main-theme}(May 2019 - April 2020)\\
+\timelineyear{}
+\justifying
+\begin{myBullets}
+\item Architected the product to be cloud-native and collaborated with team to ensure that DevOps practices are being followed
+\item Developed branch agnostic CI/CD pipeline on Jenkins \& Github Actions with vulnerabilities checks.
+Tooling: Github Actions, Jenkins
+\end{myBullets}
+
+
+\vspace{1.8ex}
+\raggedright
+\achievement{Full Stack Developer}
+\color{main-theme}(May 2019 - Nov 2019)\\
+\timelineyear{}
+\justifying
 \begin{myBullets}
 \item Created Backend APIs in NodeJS for various features in a product which helped customers to visualize on-prem landscape
 \item Did UX enhancements on frontend using SAP UI5 library
 \end{myBullets}
-System Administrator in a project dedicated to migration
+
+
+\vspace{1.8ex}
+\raggedright
+\achievement{Linux System Engineer}
+\color{main-theme}(Aug 2018 - April 2019)\\
+\timelineyear{}
+\justifying \noindent
+A project dedicated to migrate SAP Netweaver On-Premise systems to GCP
 \begin{myBullets}
-\item Tasked to migrate SAP Netweaver On-Premise systems to GCP
 \item Migrated 25+ Systems. Team achieved target of 1000 systems by year end
 \item Automated installation of Netweaver system via Perl script
 \end{myBullets}
@@ -173,7 +207,7 @@ Software Developer for IoT based applications and products
 
 \filldraw[content][-{Triangle[length=1.2mm, width=1.6mm]}] (2,2.1) -- (2,2.6);
 
-\achievementitem{2}{2.1}{Certified Kubernetes Administrator}{(July 2021 - July 2024)}{2020}
+\achievementitem{2}{2.1}{Certified Kubernetes Administrator}{(July 2021 - July 2024)}{2021}
 \achievementitem{2}{1.3}{Secured 2nd position in Inter College Quiz Competition}{(Feb 2017)}{2017}
 \achievementitem{2}{0.5}{Awarded 50\% Scholarship in all Semesters}{}{2015};
 \filldraw[content](2,0)circle(2pt);
@@ -246,7 +280,7 @@ Software Developer for IoT based applications and products
 
 \contributionitem{0}{2}{Activities on Github}
 {Various PRs \& Issues}
-{https://github.com/pulls?q=author\%3Aarpitjindal97}
+{https://github.com/pulls?q=involves\%3Aarpitjindal97}
 \end{tikzpicture}
 
 \vspace{15pt}
