Add workflow for automated compile
It also pushes the pdf to gh-pages

--- a/Modern/main.tex
+++ b/Modern/main.tex
@@ -59,7 +59,7 @@ SAP Cloud Platform is a region specific PaaS solution. It's maintained by multip
 \item Achieved High availability by rearchitecting stack for multi-zone deployment with Load Balancer provisioned via Terraform
 \item Reduced downtime by 75\% by introducing automated RCA scripts in CI/CD pipeline which can be triggered during outages
 %\item Responsible for troubleshooting \& resolving issues during outages
-\item Solved an operation problem by automating landscape update process via shell scripting which made it 85\% faster and error free
+\item Eliminated toil by automating landscape update process via shell scripting which made it 85\% faster and error free
 \item Implemented Mutual TLS to authenticate incoming metrics with auto creation \& rotation of certificates via CI/CD pipeline
 \item Automated compile \& release creation of repos by small Docker project
 \item Utilized CD pipeline to automatically rotate DB and Grafana credentials
@@ -178,7 +178,7 @@ Software Developer for IoT based applications and products
 
 \designation{Contact} & 
 \contacticon{phone-alt} &
-\contactlink{}{+91 828 588 8886} \\[1.5ex]
+\contactlink{}{+91 8285 888 886} \\[1.5ex]
 
 &
 \contacticon{envelope} &
