Change DevOps to Infrastructure

--- a/Modern/main.tex
+++ b/Modern/main.tex
@@ -28,7 +28,7 @@
 %\vspace{1mm} \summary{Experienced software engineer with a passion for developing innovative
 %programs that expedite the efficiency and effectiveness of organizational success. %Well-versed in technology and writing code to creating systems that are reliable and %user-friendly.}
 
-\vspace{1mm} \summary{DevOps Engineer with almost 4 years of working experience who loves to solve engineering problems. Well-versed in writing code to architecting solutions \& strategies. Always prefer following DevOps pratices using open-source softwares with a passion to contribute back to community.}
+\vspace{1mm} \summary{Infrastructure Engineer with 4+ years of working experience who loves to solve engineering problems. Well-versed in writing code to architecting solutions \& strategies. Always prefer following DevOps pratices using open-source softwares with a passion to contribute back to community.}
 \end{adjustwidth}
 
 \vspace{10pt}
