Init for shivani

--- a/Modern/main.tex
+++ b/Modern/main.tex
@@ -21,9 +21,9 @@
 \begin{minipage}[t]{0.5\textwidth}
 \vspace{0pt}
 \begin{adjustwidth}{3pt}{0pt}
-\name{Arpit Agarwal}
+\name{Shivani Giri}
 
-\vspace{1mm} \designation{Site Reliability Engineer}
+\vspace{1mm} \designation{Software Developer}
 
 %\vspace{1mm} \summary{Experienced software engineer with a passion for developing innovative
 %programs that expedite the efficiency and effectiveness of organizational success. %Well-versed in technology and writing code to creating systems that are reliable and %user-friendly.}
@@ -189,8 +189,8 @@ Software Developer for IoT based applications and products
 \contactlink{https://}{github.com/arpitjindal97} \\[1.5ex]
 
 &
-\contacticon{instagram} &
-\contactlink{https://}{instagram.com/arpit\_agarwal97}\\[1.5ex]
+\contacticon{twitter} &
+\contactlink{https://}{twitter.com/arpitjindal97}\\[1.5ex]
 
 &
 \contacticon{linkedin} &
