--- a/Modern/main.tex
+++ b/Modern/main.tex
@@ -178,11 +178,11 @@ Software Developer for IoT based applications and products
 
 \designation{Contact} & 
 \contacticon{phone-alt} &
-\contactlink{}{+91 8285 888 886} \\[1.5ex]
+\contactlink{}{+91 8376 949 476} \\[1.5ex]
 
 &
 \contacticon{envelope} &
-\contactlink{mailto:}{arpitjindal97@gmail.com} \\[1.5ex]
+\contactlink{mailto:}{giri.shivani09@gmail.com} \\[1.5ex]
 
 &
 \contacticon{github} &
@@ -248,8 +248,8 @@ Software Developer for IoT based applications and products
 \draw[content, thick] (2,2.1) -- (2,0.2);
 %\filldraw[content][-{Triangle[length=1mm, width=2mm]}] (2,2.0) -- (2,2.2);
 \filldraw[content][-{Triangle[length=1.2mm, width=1.6mm]}] (2,0.2) -- (2,2.2);
-\educationitem{2}{1.7}{M.Tech in Software Engineering (CGPA 8.53)}{BITS Pilani}{(Aug 2018 - July 2022)}{2018}
-\educationitem{2}{.7}{Bachelor in Computer Applications (CGPA 7.52)}{Amity University}{(July 2015 - June 2018)}{2015}
+\educationitem{2}{1.7}{Master of Computer Applications (CGPA 8.53)}{Indira Gandhi Delhi Technical University}{(Aug 2018 - June 2021)}{2018}
+\educationitem{2}{.7}{Bachelor of Computer Applications (CGPA 7.52)}{Amity University}{(July 2015 - June 2018)}{2015}
 
 \filldraw[content](2,0.2)circle(2pt);
 
