--- a/Modern/main.tex
+++ b/Modern/main.tex
@@ -189,8 +189,8 @@ Software Developer for IoT based applications and products
 \contactlink{https://}{github.com/arpitjindal97} \\[1.5ex]
 
 &
-\contacticon{instagram} &
-\contactlink{https://}{instagram.com/arpit\_agarwal97}\\[1.5ex]
+\contacticon{twitter} &
+\contactlink{https://}{twitter.com/arpitjindal97}\\[1.5ex]
 
 &
 \contacticon{linkedin} &
